recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:9: error: identifier expected but ')' found.
  avance(100.)
             ^FourSquare:10: error: identifier expected but ')' found.
  droite(90.)
            ^FourSquare:11: error: identifier expected but ')' found.
  avance(100.)
             ^FourSquare:12: error: identifier expected but ')' found.
  droite(90.)
            ^FourSquare:13: error: identifier expected but ')' found.
  avance(100.)
             ^FourSquare:14: error: identifier expected but ')' found.
  droite(90.)
            ^FourSquare:15: error: identifier expected but ')' found.
  avance(100.)
             ^FourSquare:16: error: identifier expected but ')' found.
  droite(90.)
            ^